# goblin-boys

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
ae-direction/: Cargo.toml
ae-direction/src/: direction.rs
ae-position/: Cargo.toml
ae-position/src/: delta.rs  dimension.rs  lib.rs  position.rs
client/: index.html  package-lock.json
client/public/: _HOW_TO_SYNC.md  map_1.csv
client/public/shared resources/: GobCols2.aco  GobCols2.ase  agent.aseprite  cat.aseprite  npc.aseprite  oldguy1.aseprite  voidcat.aseprite  zilla1.aseprite
client/public/sprites/npcs/: fatherneil.aseprite
client/src/: App.tsx  main.css
client/src/components/ControlOverlay/: ControlOverlay.css
client/src/components/DamageNumber/: DamageNumber.css  DamageNumber.tsx
client/src/components/DebugMenu/: DebugMenu.css  DebugMenu.tsx
client/src/components/HoverMenu/: HoverMenu.tsx
client/src/components/MainTitle/: MainTitle.css  MainTitle.tsx
client/src/components/NpcDialogue/: NpcDialogue.css  NpcDialogue.tsx
client/src/components/PlayerStats/: PlayerStats.css  PlayerStats.tsx
client/src/game/: camera.ts  canvas.ts  connection.ts  initialize.ts  input.ts  main.ts
client/src/utility/: config.ts  types.ts
crates/ae-direction/: Cargo.toml
crates/ae-direction/src/: direction.rs
crates/ae-position/: Cargo.toml
crates/ae-position/src/: delta.rs  dimension.rs  position.rs
crates/core-api/: Cargo.toml
crates/core-api/src/: lib.rs
crates/core-database/: Cargo.toml
crates/core-database/src/: lib.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: events.rs  lib.rs  mod.rs
crates/core-engine/src/components/: ai.rs  combat_stats.rs  cooldown.rs  eyes.rs  hp.rs  intend_consume.rs  intend_melee_attack.rs  intend_move.rs  intend_speak.rs  mod.rs  paths.rs  speaks.rs
crates/core-engine/src/data/: dialogue_contents.ron  dialogue_contents.rs  enemy_config.rs  enemy_configs.ron  enemy_configs.rs  map_data.rs  mod.rs  player_config.ron  player_config.rs  player_configs.ron  player_configs.rs
crates/core-engine/src/resources/: map.rs  mod.rs  user_id_resource.rs  world.rs
crates/core-engine/src/resources/raw_maps/: mod.rs
crates/core-engine/src/systems/: ai.rs  build_maps.rs  change_map.rs  combat.rs  cooldown.rs  death.rs  debug.rs  join_game.rs  leave_game.rs  message.rs  mod.rs  mouse_click.rs  mouse_hover.rs  move_timer.rs  movement_keys.rs  pathing.rs  persistence.rs  resolve_consume.rs  resolve_melee_attack.rs  resolve_move.rs  resolve_speak.rs  spawn_enemy.rs  spawn_walls.rs  speaking.rs  update_client.rs  update_map.rs
crates/core-server/: Cargo.toml
crates/core-server/src/: connections.rs  disconnect.rs  message.rs  new_connection.rs
src/: api.rs  main.rs
src/engine/: app.rs  mod.rs
src/engine/components/: eyes.rs  mod.rs  paths.rs
src/engine/events/: mod.rs
src/engine/resources/: map.rs  mod.rs  world.rs
src/engine/systems/: change_map.rs  join_game.rs  leave_game.rs  message.rs  mod.rs  mouse_click.rs  mouse_hover.rs  move_timer.rs  movement_keys.rs  spawn_walls.rs  update_client.rs  update_map.rs
src/websocket/: connections.rs  disconnect.rs  message.rs  new_connection.rs
