[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "gamejam"
readme.workspace = true
rust-version.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-api.workspace = true
core-database.workspace = true
core-engine.workspace = true
core-server.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
rand.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp.workspace = true

[workspace]
members = [
  "crates/ae-position",
  "crates/ae-direction",
  "crates/core-engine",
  "crates/core-server",
  "crates/core-api",
]

[workspace.package]
authors = ["Alex Eagleson <alexeagleson@gmail.com>", "Tyler Vipond", "James Waters", "Aaron Dagenais", "Mike Reynolds", "Max Waters", "Jodie Eagleson"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.65"

[workspace.dependencies]
ae-direction = {path = "./crates/ae-direction"}
ae-position = {path = "./crates/ae-position"}
core-api = {path = "./crates/core-api"}
core-database = {path = "./crates/core-database"}
core-engine = {path = "./crates/core-engine"}
core-server = {path = "./crates/core-server"}
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
ron = "0.8"
serde = {version = "1.0.151", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.90", default-features = false}
tokio = {version = "1", features = ["full"]}
typeshare = "1.0.0"
warp = "0.3.3"
