[package]
authors.workspace = true
description = "The API types for the game"
edition.workspace = true
homepage = ""
license.workspace = true
name = "core-api"
readme.workspace = true
repository = ""
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ae-direction = {path = "../ae-direction"}
ae-position = {path = "../ae-position"}
serde.workspace = true
serde_json.workspace = true
# warp.workspace = true
typeshare.workspace = true