[package]
authors.workspace = true
description = "The database for the game"
edition.workspace = true
homepage = ""
license.workspace = true
name = "core-database"
readme.workspace = true
repository = ""
rust-version.workspace = true
version = "0.1.0"

[dependencies]
# ae-direction = {path = "../ae-direction"}
# ae-direction.workspace = true
# ae-position = {path = "/ae-position"}
serde.workspace = true
serde_json.workspace = true
# warp.workspace = true
# typeshare = "1.0.0"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline"]}
tokio.workspace = true