[package]
authors.workspace = true
description = "The main server for the game, powered by Warp"
edition.workspace = true
homepage = ""
license.workspace = true
name = "core-server"
readme.workspace = true
repository = ""
rust-version.workspace = true
version = "0.1.0"

[dependencies]
# ae-direction = {path = "../ae-direction"}
# ae-direction.workspace = true
# ae-position = {path = "/ae-position"}
core-api = {path = "../core-api"}
# core-database = {path = "../core-database"}
futures-util = "0.3.25"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream = "0.1.11"
tokio.workspace = true
warp.workspace = true
